# ont-stats

./: .gitignore  LICENSE  README.md  credentials.ini.example  pyproject.toml
src/ont_stats/: __init__.py  cli.py  client.py  config.py  models.py  parser.py
tests/: __init__.py  test_client.py  test_config.py  test_parser.py
tests/fixtures/: install_identifier.html  install_info.html  install_login.html
